<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mobile Closet</string>
    <string name="hello">n00b</string>
    <string name="Sobre">Sobre</string>
    <string name="EscolherManequim">Escolher Manequim</string>
    <string name="DownloadColecoes">Download de Coleções</string>
    <string name="VisualizadorRoupas">Visualizador de Roupas</string>
    <string name="LooksSalvos">Looks Salvos</string>
    <string name="CadastrarRoupas">Cadastrar Roupas</string>
    <string name="Excluir">Deseja realmente excluir?</string>
    <string name="Download">Coleção</string>
    <string name="InfoLoja">Informações da Roupa</string>
    <string name="DownloadRoupas">Download de Roupas</string>
</resources>
