<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_v2"
    android:gravity="bottom"
    android:orientation="vertical"
    android:weightSum="0" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button_visualizadorroupas"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/VisualizadorRoupas"
            android:textColor="#FFFFFF"
            android:background="@drawable/botao_default" />

        <Button
            android:id="@+id/button_lookssalvos"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/LooksSalvos"
            android:textColor="#FFFFFF"
            android:background="@drawable/botao_default" />

        <Button
            android:id="@+id/button_downloadcolecoes"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/DownloadColecoes"
            android:textColor="#FFFFFF"
            android:background="@drawable/botao_default" />

        <Button
            android:id="@+id/button_escolhermanequim"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/EscolherManequim"
            android:textColor="#FFFFFF"
            android:background="@drawable/botao_default" />

        <Button
            android:id="@+id/button_cadastrarroupas"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/CadastrarRoupas"
            android:textColor="#FFFFFF" 
            android:background="@drawable/botao_default" />

        <Button
            android:id="@+id/button_sobre"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/Sobre"
            android:textColor="#FFFFFF"
            android:background="@drawable/botao_default" />
        


</LinearLayout>

    <Button
        android:id="@+id/button_sair_v2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/button_sair_v2" />
    	            
</RelativeLayout>
